--- a/src/w10/assignment/style/style.scss
+++ b/src/w10/assignment/style/style.scss
@@ -1,4 +1,4 @@
-// @import url("https://use.typekit.net/uvc1xlr.css");
+@import url("https://use.typekit.net/uvc1xlr.css");
 
 // 레귤러
 // font-family: "hanken-grotesk", sans-serif;
