--- a/src/w10/assignment/style/style.css
+++ b/src/w10/assignment/style/style.css
@@ -32,6 +32,10 @@ body {
   max-width: 75rem;
 }
 
+.container__main {
+  display: grid;
+}
+
 button {
   padding: 0;
   border: 2px solid transparent;
@@ -120,4 +124,14 @@ button {
   border: 0.125rem 0.125rem 0.125rem 0.125rem;
   align-items: center;
   padding-inline: 0.5rem;
+}
+
+.sidebar {
+  padding-top: 4rem;
+  min-width: 17.5rem;
+}
+
+.search {
+  margin-bottom: 1rem;
+  position: relative;
 }
