--- a/src/w10/assignment/style/style.scss
+++ b/src/w10/assignment/style/style.scss
@@ -67,6 +67,9 @@ body {
 }
 
 .container {
+  &__main {
+    display: grid;
+  }
 }
 
 button {
@@ -180,4 +183,14 @@ button {
     align-items: center;
     padding-inline: 0.5rem;
   }
+}
+
+.sidebar {
+  padding-top: 4rem;
+  min-width: 17.5rem;
+}
+
+.search {
+  margin-bottom: 1rem;
+  position: relative;
 }
