--- a/src/w10/assignment/style/style.css
+++ b/src/w10/assignment/style/style.css
@@ -21,8 +21,13 @@ body {
 }
 
 .Main {
-  padding: 1.5rem;
-  justify-content: center;
+  padding-inline: 1.5rem;
+}
+
+.Footer {
+  margin-top: 6rem;
+  padding-inline: 1.5rem;
+  background-color: #11284b;
 }
 
 .section__header {
@@ -30,10 +35,18 @@ body {
 }
 .section__main {
   max-width: 75rem;
+  margin-inline: auto;
+}
+.section__footer {
+  max-width: 72.5rem;
+  padding-top: 5rem;
+  margin-inline: auto;
 }
 
 .container__main {
   display: grid;
+  grid-template-columns: 17.5rem repeat(auto-fit, minmax(16.3125rem, 1fr));
+  max-width: 75rem;
 }
 
 button {
@@ -128,10 +141,328 @@ button {
 
 .sidebar {
   padding-top: 4rem;
-  min-width: 17.5rem;
+  max-width: 17.5rem;
+  grid-column: 1;
+  grid-row: 1/span 5;
+  background-color: white;
+}
+.sidebar .hover-background-color button:hover {
+  background-color: rgba(56, 31, 209, 0.4);
+}
+.sidebar-buttons {
+  width: 17.5rem;
+  padding-block: 1rem;
+  padding-left: 1.25rem;
+  align-items: center;
+}
+.sidebar-buttons button:hover {
+  color: #381fd1;
+}
+.sidebar_home {
+  color: #381fd1;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.7rem;
+}
+.sidebar_collections {
+  font-size: 1rem;
+  color: #4b4b4e;
+  font-weight: 600;
+  line-height: 1.7rem;
+}
+.sidebar_categories {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1rem;
+  color: #4b4b4e;
+  font-weight: 600;
+  line-height: 1.7rem;
+}
+.sidebar__submit {
+  margin-top: 1.5rem;
+  padding: 1.5rem;
+  background-color: #f3f2fc;
+  border-radius: 0.5rem;
+}
+.sidebar__submit-button {
+  padding-block: 0.375rem;
+  padding-inline: 1rem;
+  border: 0.125rem 0.125rem 0.125rem 0.125rem;
+  border-radius: 0.375rem;
+  background-color: #381fd1;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  width: 14.5rem;
 }
 
-.search {
+.categories_icon {
+  margin-inline: 9.2676rem 1.25rem;
+}
+
+.sidebar-all {
   margin-bottom: 1rem;
+}
+
+.search-label {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1rem;
+  margin-bottom: 0.875rem;
+  color: #4b4b4e;
+}
+.search-box {
+  text-align: center;
   position: relative;
+}
+.search-box input {
+  width: 17.5rem;
+  height: 2.75rem;
+  border: 0.125rem solid #9f9fa2;
+  border-radius: 0.25rem;
+  padding: 0rem 1rem 0rem 2.5rem;
+}
+.search-box .search-icon {
+  position: absolute;
+  top: 0.75rem;
+  left: 0.75rem;
+  color: #9f9fa2;
+}
+
+.submit__headline {
+  margin-block: 0;
+  color: #11284b;
+  font-size: 1.5rem;
+  font-weight: 900;
+  line-height: 1.65rem;
+}
+.submit__main {
+  margin-block: 0.5rem 1.5rem;
+  color: #11284b;
+  font-size: 1rem;
+  line-height: 1.7rem;
+  width: 14.5rem;
+}
+
+.main {
+  margin-top: 4rem;
+  margin-left: 4rem;
+}
+.main__headline {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.main__body-text {
+  margin-bottom: 1.5rem;
+  color: #11284b;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+}
+.main__menu {
+  margin-bottom: 4rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 261px);
+  grid-auto-rows: 1fr;
+  row-gap: 2rem;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+.main__menu button:hover {
+  border-color: black;
+}
+.main__menu-menu {
+  max-width: 16.3125rem;
+  border: 1px solid rgb(203, 203, 205);
+  border-radius: 0.5rem;
+  padding-inline: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 2.5rem;
+  text-align: left;
+}
+.main__menu-icon {
+  border: 1px solid rgb(203, 203, 205);
+  border-radius: 0.5rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  overflow: hidden;
+}
+.main__menu-blue-text {
+  margin-top: 0.75rem;
+  margin-bottom: 0.5rem;
+  color: #381fd1;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.4rem;
+}
+.main__menu-body-text {
+  margin: 0rem;
+  margin-bottom: 0.5rem;
+  color: #11284b;
+  font-size: 1.5rem;
+  font-weight: 900;
+  line-height: 1.65rem;
+  overflow: hidden;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+.main__menu-2 {
+  margin-bottom: 4rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 261px);
+  grid-auto-rows: 1fr;
+  row-gap: 2rem;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+.main__menu-2 button:hover {
+  border-color: black;
+}
+.main__menu-2-button--1 {
+  color: #11284b;
+  font-weight: 900;
+  max-width: 16.3125rem;
+  border-radius: 0.5rem;
+  border: none;
+  border: 1px;
+  border-bottom: 0px;
+  text-align: left;
+  background-color: rgb(246, 246, 235);
+  padding: 2rem;
+  padding-bottom: 0rem;
+  position: relative;
+}
+.main__menu-2-button--2 {
+  color: #11284b;
+  font-weight: 900;
+  max-width: 16.3125rem;
+  border: none;
+  border: 1px;
+  border-bottom: 0px;
+  text-align: left;
+  background-color: #f3f2fc;
+  padding: 2rem;
+  padding-bottom: 0rem;
+  position: relative;
+  overflow: hidden;
+}
+.main__menu-2-button--3 {
+  color: #11284b;
+  font-weight: 900;
+  max-width: 16.3125rem;
+  border-radius: 0.5rem;
+  border: none;
+  border: 1px;
+  border-bottom: 0px;
+  text-align: left;
+  background-color: rgb(246, 246, 235);
+  padding: 2rem;
+  padding-bottom: 0rem;
+  overflow: hidden;
+}
+.main__menu-2-icon-2-1 img {
+  margin-left: -2rem;
+  margin-right: 2rem;
+  margin-top: -55px;
+  width: 16.3125rem;
+  height: auto;
+  position: absolute;
+  z-index: -1;
+}
+.main__menu-2-icon-2-2 img {
+  margin-left: -2rem;
+  margin-right: 2rem;
+  margin-top: 60px;
+  width: 16.3125rem;
+  height: auto;
+}
+.main__menu-2-icon-2-3 img {
+  margin-left: -2rem;
+  margin-right: 2rem;
+  margin-top: 60px;
+  width: 16.3125rem;
+  height: auto;
+}
+.main__menu-2-body-text-2 {
+  margin: 0rem;
+  color: #11284b;
+  font-size: 1.5rem;
+  font-weight: 900;
+  line-height: 1.65rem;
+  max-width: 16.3125rem;
+}
+
+.headline__title h2 {
+  margin-block: 0;
+  color: #11284b;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 3.3rem;
+}
+.headline__view-all button:hover {
+  color: rgba(56, 31, 209, 0.4);
+}
+.headline__view-all-button {
+  color: #381fd1;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.4rem;
+  text-decoration: underline;
+  border-radius: 0rem;
+}
+
+.buttonSettings button:hover {
+  transform: scale(1.05);
+}
+
+.footer-information {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(254px, 1fr));
+  max-width: 72.5rem;
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
+  row-gap: 3rem;
+  color: #fff;
+}
+.footer-information-part .title {
+  font-size: 0.875rem;
+  font-weight: 900;
+  line-height: 1.3125rem;
+  letter-spacing: 1.12px;
+  margin-bottom: 0.5rem;
+}
+.footer-information-part .text {
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.7rem;
+  margin-bottom: 0.5rem;
+}
+.footer-others {
+  padding-block: 5rem;
+}
+.footer-others-flex {
+  display: flex;
+  justify-content: space-between;
+}
+.footer-others-flex-icons {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(2rem, 1fr));
+  gap: 0.75rem;
+}
+.footer-others-flex-text {
+  color: rgb(254, 219, 99);
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.4rem;
+  letter-spacing: 0.08rem;
+}
+
+.w-8 {
+  width: 2rem;
+  height: 2rem;
 }
