--- a/src/Frontend_Practice/lv_1/style/style.css
+++ b/src/Frontend_Practice/lv_1/style/style.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+:root {
+  --fixed-m-x: 15px;
+  --fixed-m-y: 20px;
+}
+
 *,
 *::before,
 *::after {
@@ -5,5 +11,89 @@
 }
 
 body {
-  margin: 100px;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+img {
+  display: block;
+}
+
+.fixed {
+  position: fixed;
+  display: none;
+}
+a .fixed,
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+.fixed p {
+  margin-block: 0;
+}
+.fixed--pos-tl {
+  top: var(--fixed-m-x);
+  left: var(--fixed-m-y);
+  display: block;
+}
+.fixed--pos-tr {
+  top: var(--fixed-m-x);
+  right: var(--fixed-m-y);
+}
+.fixed--pos-br {
+  bottom: var(--fixed-m-x);
+  right: var(--fixed-m-y);
+}
+.fixed--pos-bl {
+  right: calc(var(--fixed-m-x) + 64px + 100px);
+  left: var(--fixed-m-y);
+  bottom: var(--fixed-m-x);
+}
+.fixed--role-logo {
+  width: 260px;
+  aspect-ratio: 519/58;
+}
+.fixed--role-contact {
+  font-weight: 700;
+}
+.fixed--role-contact:hover {
+  text-decoration: underline;
+}
+.fixed--role-list {
+  padding-left: 0;
+  margin-block: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column-reverse;
+  line-height: 28.8px;
+  text-transform: capitalize;
+}
+.fixed--role-list > li:hover {
+  text-decoration: underline;
+}
+.fixed--role-about {
+  text-wrap: balance;
+  font-weight: 700;
+  max-width: 30ch;
+}
+.fixed__copyright {
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+.fixed__copyright > a {
+  text-decoration: underline;
+}
+.fixed__copyright > a:hover {
+  text-decoration: none;
+}
+.fixed__policy {
+  display: block;
+  margin-top: 1lh;
+  text-decoration: underline;
+}
+.fixed__policy:hover {
+  text-decoration: none;
 }
