--- a/src/Frontend_Practice/lv_1/style/style.css
+++ b/src/Frontend_Practice/lv_1/style/style.css
@@ -2,6 +2,7 @@
 :root {
   --fixed-m-x: 15px;
   --fixed-m-y: 20px;
+  --logo-h: 30px;
 }
 
 *,
@@ -10,20 +11,56 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+}
+@media (width < 1000px) {
+  html {
+    scroll-snap-type: none;
+  }
+}
+
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   line-height: 25px;
+  animation-name: bg-change;
+  animation-timeline: scroll();
+  background-color: #fd5f8d;
 }
 
+@keyframes bg-change {
+  0%, 8.3333333333% {
+    background-color: #fd5f8d;
+  }
+  16.6666666667% {
+    background-color: #ffffff;
+  }
+  33.3333333333% {
+    background-color: #00c1b5;
+  }
+  50% {
+    background-color: #ff651a;
+  }
+  66.6666666667% {
+    background-color: #ffbe00;
+  }
+  83.3333333333% {
+    background-color: #1d3fbb;
+  }
+  100% {
+    background-color: #e30512;
+  }
+}
 img {
   display: block;
 }
 
 .fixed {
   position: fixed;
-  display: none;
+  z-index: 999;
 }
 a .fixed,
 a {
@@ -37,7 +74,6 @@ a {
 .fixed--pos-tl {
   top: var(--fixed-m-x);
   left: var(--fixed-m-y);
-  display: block;
 }
 .fixed--pos-tr {
   top: var(--fixed-m-x);
@@ -53,7 +89,7 @@ a {
   bottom: var(--fixed-m-x);
 }
 .fixed--role-logo {
-  width: 260px;
+  height: var(--logo-h);
   aspect-ratio: 519/58;
 }
 .fixed--role-contact {
@@ -61,6 +97,11 @@ a {
 }
 .fixed--role-contact:hover {
   text-decoration: underline;
+}
+@media (width < 1000px) {
+  .fixed--role-contact {
+    display: none;
+  }
 }
 .fixed--role-list {
   padding-left: 0;
@@ -71,6 +112,11 @@ a {
   line-height: 28.8px;
   text-transform: capitalize;
 }
+@media (width < 1000px) {
+  .fixed--role-list {
+    display: none;
+  }
+}
 .fixed--role-list > li:hover {
   text-decoration: underline;
 }
@@ -78,6 +124,11 @@ a {
   text-wrap: balance;
   font-weight: 700;
   max-width: 30ch;
+}
+@media (width < 1000px) {
+  .fixed--role-about {
+    display: none;
+  }
 }
 .fixed__copyright {
   font-size: 0.75rem;
@@ -95,5 +146,107 @@ a {
   text-decoration: underline;
 }
 .fixed__policy:hover {
+  text-decoration: none;
+}
+
+.wrapper {
+  z-index: 1;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.issue {
+  scroll-snap-align: center;
+  display: grid;
+  grid-template-columns: minmax(var(--fixed-m-x), 1fr) minmax(0, 420px) minmax(var(--fixed-m-x), 1fr);
+  grid-template-rows: minmax(calc(2 * var(--fixed-m-y) + var(--logo-h)), 1fr) auto 5lh minmax(calc(2 * var(--fixed-m-y) + var(--logo-h)), 0.5fr);
+  min-height: 100svh;
+}
+.issue__img {
+  grid-column: 2;
+  grid-row: 2;
+  justify-self: stretch;
+}
+.issue__text {
+  grid-column: 2;
+  grid-row: 3;
+  text-align: center;
+}
+.issue__title {
+  text-transform: capitalize;
+  font-weight: 700;
+}
+.issue__link {
+  margin-block: 1lh 0;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.footer {
+  display: none;
+}
+@media (width < 1000px) {
+  .footer {
+    display: block;
+  }
+}
+.footer--role-logo {
+  height: var(--logo-h);
+  aspect-ratio: 519/58;
+}
+.footer--role-contact {
+  font-weight: 700;
+}
+.footer--role-contact:hover {
+  text-decoration: underline;
+}
+@media (width < 1000px) {
+  .footer--role-contact {
+    display: none;
+  }
+}
+.footer--role-list {
+  padding-left: 0;
+  margin-block: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column-reverse;
+  line-height: 28.8px;
+  text-transform: capitalize;
+}
+@media (width < 1000px) {
+  .footer--role-list {
+    display: none;
+  }
+}
+.footer--role-list > li:hover {
+  text-decoration: underline;
+}
+.footer--role-about {
+  text-wrap: balance;
+  font-weight: 700;
+  max-width: 30ch;
+}
+@media (width < 1000px) {
+  .footer--role-about {
+    display: none;
+  }
+}
+.footer__copyright {
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+.footer__copyright > a {
+  text-decoration: underline;
+}
+.footer__copyright > a:hover {
+  text-decoration: none;
+}
+.footer__policy {
+  display: block;
+  margin-top: 1lh;
+  text-decoration: underline;
+}
+.footer__policy:hover {
   text-decoration: none;
 }
